--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <h1>NASA Calendar</h1>
 
             <div class="form-box">
-                <form>
-                    <label for="Name">Name</label>
-                    <input Name="Name">
+                <h3>Fill All Boxes</h3>
+                <form class="input-group">
+                    
+                    <input Name="Name" Name>
                     <br>
-                    <label for="image">Image</label>
-                    <input required type="image" name="image">
+                    <label class="field" for="Birth Date">Birth Date
+                    <input required type="date" name="Birth Date" id=""></label>
                     <br>
-                    <label for="Birth Date"></label>
-                    <input required type="date" name="Birth Date" id="">
+                    <label class="field" for="E-mail">E-mail
+                    <input required type="email" name="E-mail" id=""></label>
                     <br>
-                    <label for="E-mail">E-mail</label>
-                    <input required type="email" name="E-mail" id="">
+                    <label class="field" for="Phone">Phone Number
+                    <input required type="number" name="Phone Number"></label>
                     <br>
-                    <label for="Phone">Phone Number</label>
-                    <input required type="number" name="Phone Number">
-                    <br>
-                    <button type="submit">Search</button>
-                    <button type="reset">Reset</button>
+                    <div id="btn">
+                        <button type="submit" class="toggle-btn">Search</button>
+                        <button type="reset" class="toggle-btn">Reset</button>
+                    </div>
                 </form>
             </div>
     
