--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             <div class="form-box">
                 <h3>Fill All Boxes</h3>
                 <form class="input-group">
-                    
-                    <input Name="Name" Name>
+                    <label for="Name">Name
+                    <input Name="Name" class="field"></label>
                     <br>
-                    <label class="field" for="Birth Date">Birth Date
-                    <input required type="date" name="Birth Date" id=""></label>
+                    <label for="Birth Date">Birth Date
+                    <input required type="date" class="field" name="Birth Date" id=""></label>
                     <br>
-                    <label class="field" for="E-mail">E-mail
-                    <input required type="email" name="E-mail" id=""></label>
+                    <label for="E-mail">E-mail
+                    <input required type="email" class="field" name="E-mail" id=""></label>
                     <br>
-                    <label class="field" for="Phone">Phone Number
-                    <input required type="number" name="Phone Number"></label>
+                    <label for="Phone">Phone Number
+                    <input required type="number" class="field" name="Phone Number"></label>
                     <br>
                     <div id="btn">
                         <button type="submit" class="toggle-btn">Search</button>
