--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
                     <input required type="number" class="field" name="Phone Number"></label>
                     <br>
                     <div id="btn">
-                        <button type="submit" class="toggle-btn">Search</button>
+                        <button type="submit" formaction="calendar.html" class="toggle-btn">Submit</button>
                         <button type="reset" class="toggle-btn">Reset</button>
                     </div>
                 </form>
             </div>
     
 </div>
+<link rel="stylesheet" href="">
+
+<script src="index.js"></script>
 </body>
 </html>
