--- a/calendar.html
+++ b/calendar.html
@@ -16,8 +16,8 @@
         <div class="month">
 <i class="fas fa-angle-left prev"></i>
 <div class="date">
-    <h1>August</h1>
-    <p>Thur Aug 7, 1997</p>
+    <h1>October</h1>
+    <p>Mon Oct 12, 1998</p>
 </div>
 <i class="fas fa-angle-right next"></i>
         </div>
@@ -31,7 +31,6 @@
             <div>Sat</div>
         </div>
         <div class="days">
-            <div class="prev-date">27</div>
             <div class="prev-date">28</div>
             <div class="prev-date">29</div>
             <div class="prev-date">30</div>
@@ -47,7 +46,9 @@
             <div>9</div>
             <div>10</div>
             <div>11</div>
-            <div>12</div>
+            <div>
+                <button type="button" id="birth" class="today">12</button>
+            </div>
             <div>13</div>
             <div>14</div>
             <div>15</div>
@@ -66,13 +67,7 @@
             <div>28</div>
             <div>29</div>
             <div>30</div>
-            <div>31</div>
-            <div class="next-date">1</div>
-            <div class="next-date">2</div>
-            <div class="next-date">3</div>
-            <div class="next-date">4</div>
-            <div class="next-date">5</div>
-            <div class="next-date">6</div>     
+            <div>31</div> 
         </div>
     </div>
 </div>
