--- a/calendar.html
+++ b/calendar.html
@@ -14,60 +14,63 @@
 <body>
     
 <div class="container">
-    <div class="calendar">
-        <div class="month">
-<i class="fas fa-angle-left prev"></i>
-<div class="date">
-    <h1>October</h1>
-    <p>Mon Oct 12, 1998</p>
-</div>
-<i class="fas fa-angle-right next"></i>
-        </div>
-        <div class="weekdays">
-            <div>Sun</div>
-            <div>Mon</div>
-            <div>Tues</div>
-            <div>Wed</div>
-            <div>Thur</div>
-            <div>Fri</div>
-            <div>Sat</div>
-        </div>
-        <div class="days">
-            <div class="prev-date">28</div>
-            <div class="prev-date">29</div>
-            <div class="prev-date">30</div>
-            <div class="prev-date">31</div>
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>7</div>
-            <div>8</div>
-            <div>9</div>
-            <div>10</div>
-            <div>11</div>
-            <div type="button" id="birth" formaction="birth.html" class="today" >12</div>
-            <div>13</div>
-            <div>14</div>
-            <div>15</div>
-            <div>16</div>
-            <div>17</div>
-            <div>18</div>
-            <div>19</div>
-            <div>20</div>
-            <div>21</div>
-            <div>22</div>
-            <div>23</div>
-            <div>24</div>
-            <div>25</div>
-            <div>26</div>
-            <div>27</div>
-            <div>28</div>
-            <div>29</div>
-            <div>30</div>
-            <div>31</div> 
+    <div class="whole">
+        <div class="calendar">
+            <div class="month">
+              <i class="fas fa-angle-left prev"></i>
+             <div class="date">
+               <h1>October</h1>
+               <p>Mon Oct 12, 1998</p>
+             </div>
+                <i class="fas fa-angle-right next"></i>
+            </div>
+            <div class="weekdays">
+                <div>Sun</div>
+                <div>Mon</div>
+                <div>Tues</div>
+                <div>Wed</div>
+                <div>Thur</div>
+                <div>Fri</div>
+                <div>Sat</div>
+            </div>
+            <div class="days">
+                <div class="prev-date">28</div>
+                <div class="prev-date">29</div>
+                <div class="prev-date">30</div>
+                <div class="prev-date">31</div>
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+                <div>7</div>
+                <div>8</div>
+                <div>9</div>
+                <div>10</div>
+                <div>11</div>
+                <div type="button" id="birth" class="today" >12</div>
+                <div>13</div>
+                <div>14</div>
+                <div>15</div>
+                <div>16</div>
+                <div>17</div>
+                <div>18</div>
+                <div>19</div>
+                <div>20</div>
+                <div>21</div>
+                <div>22</div>
+                <div>23</div>
+                <div>24</div>
+                <div>25</div>
+                <div>26</div>
+                <div>27</div>
+                <div>28</div>
+                <div>29</div>
+                <div>30</div>
+                <div>31</div>
+            </div>
+            <div id="content"></div>
         </div>
     </div>
 </div>
